Fixing site overflow

--- a/docs/style.css
+++ b/docs/style.css
@@ -14,14 +14,16 @@
 
 html, body{
     font-family: 'Open Sans', sans-serif;
-    width: 100%;
+    width: 100vw;
     margin: 0;
+    padding: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow: auto;
 }
 
 .strip {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
 }
